# lib-katana

./: .gitignore  Makefile  README.md  configure.ac  errors.go  ints.go  ints_test.go
capi/: common.h  message.go  patch.go  refs.go  types.go
data/: tsl-boilerplate.txt  tsl-bounds-2.csv  tsl-bounds.csv  tsl-map.csv  tsl-map.ods
patch/: enc_sparse.go  patch.go
scripts/: generate-bounds.sh  test-ctypes.py
src/: Makefile.am  firmware.h  patch.c  patch.h  sysex.c  sysex.h
sysex/: address.go  address_test.go  interfaces.go  message.go  message_test.go
